--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div id="header">
         <div class="container">
             <nav>
-                <img src="image2.png" class="logo">
+                <img src="#" class="logo">
                 <ul>
                     <li><a href="#header">Home</a></li>
                     <li><a href="#about">About</a></li>
@@ -35,11 +35,11 @@
     <div class="container">
         <div class="row">
             <div class="about-col-1">
-                <img src="imagee.jpeg">
+                <img src="#">
             </div>
             <div class="about-col-2">
                 <h1 class="subtitle">About Me</h1>
-                <p>Hey! I am Bavitha and I am a Data Science Student. I want to pursue a job opportunity in a competitive
+                <p>Hey! I am [Your NAME] and I am a Data Science Student. I want to pursue a job opportunity in a competitive
                     environment that will challenge me to push my
                     boundaries and expand my technical knowledge
                     and skills to ensure my personal and
@@ -61,7 +61,7 @@
                     </div>
                     <div class="tab-contents" id="experience">
                         <ul>
-                            <li><span>2023</span><br>Designed an E-Commerce website as an intern at Solar Secure Solutions</li>
+                            <li><span>2023</span><br>Designed an E-Commerce website.</li>
                             <li><span>2023</span><br>Developed an online platform that assists users to create effective and professional resumes.</li>
 
                         </ul>
@@ -69,8 +69,8 @@
                     <div class="tab-contents" id="education">
                         <ul>
                             <li><span>2021-present</span><br>Pursuing Computer Science and Engineering in Data Science.<br></li>
-                            <li><span>2021</span><br>Completed Intermediate from New Chaitanya Junior College.</li>
-                            <li><span>2018</span><br>Completed Secondary Education from Red Convent High School</li>
+                            <li><span>2021</span><br>Completed Intermediate [Your College]</li>
+                            <li><span>2018</span><br>Completed Secondary Education [Your School]</li>
 
                         </ul>
                     </div>
@@ -113,11 +113,11 @@
         <h1 class="sub-title">My Work</h1>
         <div class="work-list">
             <div class="work">
-                <img src="Work.png">
+                <img src="#">
                 <div class="layer">
                     <h3>E-Commerce Website</h3>
                     <p>The website focuses on ondering fast-food items online. It spotlights the distinctive features, that hav set this website apart, focusing on it's diverse product offerings, user-friendly interface and commitment to ensuring the quality and safety of food products.</p>
-                    <a href="https://drive.google.com/drive/folders/1TsSXs1m0c9moAEzu2krW8mNRNMNxECJS"><i class="fa-solid fa-link"></i></a>
+                    <a href="#"><i class="fa-solid fa-link"></i></a>
                 </div>
             </div>
             <div class="work">
@@ -138,14 +138,14 @@
         <div class="row">
             <div class="contact-left">
                 <h1 class="sub-title">Contact Me</h1>
-                <p><i class="fa-solid fa-paper-plane"></i>bavithagurram0@gmail.com</p>
-                <p><i class="fa-solid fa-phone"></i>+91 6309667498</p>
+                <p><i class="fa-solid fa-paper-plane"></i>name@gmail.com</p>
+                <p><i class="fa-solid fa-phone"></i>[phone Number]</p>
                 <div class="social-icons">
                     <a href="#"><i class="fa-brands fa-instagram"></i></a>
                     <a href="#"><i class="fa-brands fa-linkedin"></i></a>
                     <a href="#"><i class="fa-brands fa-github"></i></a>
                 </div>
-                <a href="Bavitha Resume.pdf" download class="btn btn2">Download CV</a>
+                <a href="#" download class="btn btn2">Download CV</a>
             </div>
             <div class="contact-right">
                 <form name="submit-to-google-sheet">
@@ -159,7 +159,7 @@
         </div>
     </div>
     <div class="copyright">
-        <p>Copyright © 2024 Bavitha. All rights reserved. </p>
+        <p>Copyright © 2024 . All rights reserved. </p>
     </div>
 </div>
 
@@ -186,7 +186,7 @@
 
 </script>
 <script>
-    const scriptURL = 'https://script.google.com/macros/s/AKfycbxDAnKkDEF7BFUBV5yLSKfKnnMLtPZyk2CyugkGyz7mdXVHA_57U__h8CSPRwU9YLo/exec'
+    const scriptURL = '#'
     const form = document.forms['submit-to-google-sheet']
     const msg=document.getElementById("msg")
   
