--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
                 <i class="fa-solid fa-code"></i>
                 <h2>E-Commerce Development</h2>
                 <p> Developing and designing online websites with secure payment gateways and user-friendly interfaces.</p>
-                <a href="https://drive.google.com/drive/folders/1TsSXs1m0c9moAEzu2krW8mNRNMNxECJS">Learn More</a>
+                <a href="#">Learn More</a>
             </div>
             <div>
                 <i class="fa-solid fa-chart-line"></i>
